# Cncl-RT-WAL

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  clang-uml.yaml  readme_ru.md  task.md  vision.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
apps/: CMakeLists.txt
apps/brewery/: CMakeLists.txt
apps/brewery/docs/: README.md  Sys_Intent_Automation_Boundary_Draft_v1.md  TODO.md  brewery-wiring.yaml  channel-wiring.md  hw_scheme.md  plan.md  plan_ql.md  plan_v.1.md  recipe_spec_v1.md  safety_controller_spec_v1.md  stm8_contactor_spec_v1.md  sw_scheme.md  system_down_addition.md  task-channel_list.md
apps/demo/trivial_tasks/: CMakeLists.txt  main.cpp  sys_preemption_stub.cpp
apps/minimal/: CMakeLists.txt  main.cpp
docs/: README.md  TaskWrapper — RT Contract & Invariants.md  prompt.md  testing_guidelines.md  wal_format.md
docs/architecture/: dependency_graph.md  directory_structure.md  layering.md
docs/concepts/: README.md  SPMCSnapshot_v3 — RT Contract & Invariants.md  spmc-limitations.md
docs/concepts/Thinking`s/: STAM v1 Контракты и технология каналов task.md  STAM v1: Контракты и технология каналов (Event-State, assign_port, seal.md  STAM_channel_binding_task.md
docs/concepts/fixed/: README.md  STAM v1 Зафиксированные решения по каналам (FIXED).md  STAM_DTO_chanel_structure.md  STAM_DTO_channel_technology.md  STAM_SysRegistry_structure.md  STAM_SysRegistry_technology.md  STAM_TypeErasedHandle_structure.md  STAM_sys_design.md  STAM_task_wrapper_structure.md  system_scheme.md
docs/concepts/old/: Primitives update conversation.md  STAM v1 Зафиксированные решения по каналам (FIXED).md  STAM v1 Контракты System Registry и TaskWrapper (обсуждение).спринт 1.md  STAM_DTO_chanel_structure.md  STAM_DTO_channel_technology.md  STAM_SysRegistry_structure.md  STAM_SysRegistry_technology.md  STAM_TypeErasedHandle_structure.md  STAM_sys_design.md  STAM_task_wrapper_structure.md  design.md  system_scheme.md  task.md
docs/concepts/safety/: safety_thinking.md  safety_thinking_ru.md
docs/concepts/sys_regestery_architecture/: README.md  STAM_DTO_channel_technology.md  STAM_SysRegistry_structure.md  STAM_SysRegistry_technology.md  STAM_channel_binding_conversation.md  (+6 more)
docs/contracts/: DoubleBuffer — RT Contract & Invariants.md  Mailbox2Slot_v1.3 — RT Contract & Invariants.md  SPSCRing — RT Contract & Invariants.md
docs/diagrams/: README.md  primitives_class.puml
docs/portability/: SYS_PORTABILITY.md
docs/sprints/: 260217.result.md  260217.task.md  260218-01.task.md  260218.task.md
include/libs/: crc32_rt.hpp  dbl_buffer.hpp  spsc_ring.hpp
include/model/: tags.hpp
include/stam/: stam.hpp
include/sys/: sys_align.hpp  sys_arch.hpp  sys_compiler.hpp  sys_config.hpp  sys_fence.hpp  sys_platform.hpp  sys_rt.hpp
include/tasks/: taskwrapper.hpp
include/wal/: writers_dispatcher.hpp
modules/: CMakeLists.txt
modules/demo/: CMakeLists.txt
modules/demo/include/modules/demo/: demo_channel.hpp  trivial_nonrt_task.hpp  trivial_rt_task.hpp
modules/demo/src/: trivial_nonrt_task.cpp  trivial_rt_task.cpp
modules/demo/trivial_tasks/: CMakeLists.txt
modules/logging/: CMakeLists.txt
modules/logging/src/: log_record.hpp  logger_task.cpp  writers_dispatcher.hpp
modules/logging/src/backend/: backend.hpp
modules/logging/src/writer/: writer.cpp  writer.hpp
primitives/: CMakeLists.txt  primitives_README.md
primitives/docs/: DoubleBuffer — RT Contract & Invariants.md  DoubleBufferSeqLock - RT Contract & Invariants.md  Mailbox2Slot — RT Contract & Invariants.md  Mailbox2SlotSmp - RT Contract & Invariants.md  Memory Footprint — Primitives.md  SPMCSnapshot — RT Contract & Invariants.md  SPMCSnapshotSmp - RT Contract & Invariants.md  SPSCRing — RT Contract & Invariants.md  SPSCRingDropOldest — RT Contract & Invariants.md  Sys — Portability Contract.md
primitives/include/stam/: stam.hpp
primitives/include/stam/primitives/: crc32_rt.hpp  dbl_buffer.hpp  dbl_buffer_seqlock.hpp  mailbox2slot.hpp  mailbox2slot_smp.hpp  snapshot_concepts.hpp  spmc_snapshot.hpp  spmc_snapshot_smp.hpp  spsc_ring.hpp  spsc_ring_drop_oldest.hpp
primitives/include/stam/sys/: sys_align.hpp  sys_arch.hpp  sys_compiler.hpp  sys_config.hpp  sys_fence.hpp  sys_preemption.hpp  sys_rt.hpp  sys_signal.hpp  sys_topology.hpp  user_sys_config.hpp.example
primitives/tests/: CMakeLists.txt  crc32_rt_test.cpp  dbl_buffer_seqlock_test.cpp  dbl_buffer_test.cpp  mailbox2slot_smp_test.cpp  mailbox2slot_test.cpp  main.cpp  spmc_snapshot_smp_test.cpp  spmc_snapshot_test.cpp  spsc_ring_drop_oldest_test.cpp  spsc_ring_test.cpp  suite_main.cpp  sys_preempt_lock.cpp  sys_preempt_lock.hpp  test_filter.cpp  test_filter.hpp  test_harness.hpp  todo.md
scripts/: plantuml_layout.sh
src/: CMakeLists.txt
src/backend/: CMakeLists.txt  backend.hpp
src/modules/demo/: trivial_nonrt_task.cpp
src/modules/logging/backend/: backend.hpp  file_backend.cpp
src/rtr/: CMakeLists.txt  dummy.cpp
src/writer/: CMakeLists.txt  writer.hpp
stam-rt-lib/: CMakeLists.txt
stam-rt-lib/docs/: Bootstrap Lifecycle - End-to-End Contract.md  ChannelRef - Type-Erased View Contract.md  ChannelWrapper - Bootstrap Contract & Invariants.md  Model Tags & Concepts - Contract.md  PortBinding - PortName & BindResult Contract.md  README.md  TaskRegistry - Seal Contract & Invariants.md  TaskWrapper — RT Contract & Invariants.md  TaskWrapperRef - Type-Erased Dispatch Contract.md
stam-rt-lib/include/exec/: scheduler.hpp  task_registry.hpp
stam-rt-lib/include/exec/tasks/: task_wrapper.hpp  task_wrapper_ref.hpp  taskwrapper.hpp
stam-rt-lib/include/model/: channel_wrapper.hpp  channel_wrapper_ref.hpp  heartbeat_store.hpp  port.hpp  tags.hpp
stam-rt-lib/rtr/: CMakeLists.txt
stam-rt-lib/tests/exec/: CMakeLists.txt  main.cpp  task_registry_test.cpp  taskwrapper_test.cpp
tests/: CMakeLists.txt  README.md  dispatcher_smoke.cpp  testing_guidelines.md
tests/primitives/: CMakeLists.txt  crc32_rt_test.cpp  dbl_buffer_test.cpp  mailbox2slot_test.cpp  spsc_ring_test.cpp
tests/unit/: CMakeLists.txt
(+25 files in other folders)
